# GATO

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  MPC_PCG_FOR_TIAGO_TUNING.md  Makefile  QDLDL_WARMSTART_EXPERIMENT.md  README.md  REBASE_ICRA_PLAN.md  TIAGO_PCG_ABLATIONS.md  TIAGO_PCG_DEBUG_PLAN.md  pyproject.toml  sim_tiago_urdf.xml
examples/: benchmark_fig8.py  bsqp.cu  bsqp_7DOF.cu  bsqp_7dof.cu  convert_urdf.py  convert_urdf_2.py  gato_f8_flexiv_2.py  gato_fig8_tracking.ipynb  gato_fig8_tracking.py  gato_fig8_tracking_artifacts.py  gato_fig8_tracking_artifacts_anim.py  gato_fig8_tracking_flexiv.ipynb  gato_fig8_tracking_flexiv4s.ipynb  gato_fig8_tracking_iiwa14.ipynb  gato_fig8_tracking_tiago.ipynb  gato_hparam_batch.ipynb  gato_hparam_batch_results.pkl  gato_pickplace.ipynb  gato_pickplace_flexiv.ipynb  iiwa14_pickplace_goals.py  large_easy_tracking.py  plot_fig8_tracking.py  qdldl_pcg_warmstart_experiment.py  test_f8_v0.py  test_f8_v1.py  test_f8_v2.py  testing_flexiv_model.py  tiago_arm_pickplace_goals.py  tiago_large_trajectory_tracking.py  tiago_single_to_smoke.py
examples/flexiv_description/: flexiv_rizon4s_kinematics.urdf  flexiv_rizon4s_kinematics_zaxis2.urdf
felixnotes/: BUGFIXES.md  GIT_HOOKS.md  GIT_STYLE.md  IMPL_TIAGO.md  NOTES.md  RUNTIME_ENVIRONMENT.md  SESSION.md  SETUP_WITHOUT_DOCKER.md  TESTING.md  TODO.md
gato/: settings.h
gato/bsqp/: bsqp.cuh
gato/bsqp/kernels/: merit.cuh  pcg.cuh  qdldl_linsys.cuh  setup_kkt.cuh
gato/dynamics/flexiv_rizon4s/: RNEA_wf.c  RNEA_wof.c  flexiv_rizon4s_fext.cuh  flexiv_rizon4s_grid.cuh  flexiv_rizon4s_grid_old.cuh  flexiv_rizon4s_plant.cuh  grid.cuh
gato/dynamics/iiwa14/: iiwa14_plant.cuh
gato/dynamics/indy7/: indy7_plant.cuh
gato/dynamics/tiago_right/: tiago_right_arm_include_gripper.urdf  tiago_right_grid.cuh  tiago_right_limits.cuh  tiago_right_plant.cuh
gato/utils/: cuda.cuh
log/: latest_build
python/: bindings.cu
python/bsqp/: common.py  config.py  interface.py  mpc_controller.py  mpc_controller_m.py  mpc_controller_m1.py  mpc_controller_m2.py  mpc_controller_v0.py
tests/cpp/: cuda_access_smoke.cu
tests/python/: conftest.py  test_common.py  test_interface.py  test_tiago_safety_monitor.py  test_tiago_sim_time.py  test_tiago_terminal_cost.py  test_tracking_smoke.py
tiago_configs/: comfortable_pose_collision_blacklist.json
tiago_configs/collision_alpha_wrap_a3_o25_cap001/: alpha_wrap_results.json  tiago_pro_collision_alpha_wrap_a3_o25_cap001.urdf
tiago_configs/collision_alpha_wrap_a3_o25_cap001/meshes/: arm_1_link_collision.stl  arm_2_link_collision.stl  arm_3_link_collision.stl  arm_4_link_collision.stl  arm_5_link_collision.stl  arm_6_link_collision.stl  base_dock_link.stl  base_link_tc.stl  fingertip.stl  head_1_link_collision.stl  head_2_link_collision.stl  inner_finger.stl  laptop_tray_collision.stl  outer_finger.stl  suspension_front_link.stl  suspension_rear_link.stl  torso_fixed_collision.stl  torso_lift_link_collision.stl
tiago_examples/: ros_minimal.py  tiago_fig8_tracking.py  tiago_reach_target.py
tiago_src/gato_tiago/: __init__.py  config.py  ros_tiago.py  safety_monitor.py  tiago_controller_process.py  tiago_history_writer.py  tiago_mpc_controller.py  tiago_tools.py
tiago_tools/: Dockerfile  alpha_wrap_tool_alpha_offset_capped.cpp  capture_collision_review_data.py  capture_joint_state_recording.py  cyclone_pal_loopback.xml  docker.sh  generate_simplified_collision.py  generate_tiago_dynamics.py  replay_full_state_history.py  review_collision_pairs.py  tiago_restore_default.py
tools/: analyze_schur_dump.py  build.sh  check_tiago_gripper_lump.py  docker.sh  generate_tiago_dynamics.py  install.sh  test_cuda_compatibility.sh
